fix reservation interaction button being too big

--- a/TaskTigerFrontEnd/src/Components/ReservationCard/ReservationCard.css
+++ b/TaskTigerFrontEnd/src/Components/ReservationCard/ReservationCard.css
@@ -68,7 +68,7 @@
 }
 
 .reservation-interaction {
-font-size: 4rem;
+font-size: 3rem;
 align-items: center;
 cursor: pointer;
 }
